# VersaTerm

./: .gitmodules  README.md
hardware/PCB/: ReadMe.md  VersaTermBOM.csv  VersaTermBOM.xlsx
hardware/enclosure/: ReadMe.md  VersaTermBottom.f3d  VersaTermBottom.stl  VersaTermTop.f3d  VersaTermTop.stl
hardware/enclosure/DigicoolThings/: ReadMe.md  VersaTerm.3mf  VersaTermBottom.f3d  VersaTermTop.f3d
hardware/pictures/: ReadMe.md
lib/PicoVGA/: CMakeLists.txt  ReadMe.md  include.h  vga.cpp  vga.h  vga.pio.h
software/: CMakeLists.txt  ReadMe.md  VersaTerm.uf2
software/lib/PicoVGA/: global.h  vga.pio  vga_util.cpp  vga_vmode.cpp  vga_vmode.h
software/lib/PicoVGA/render/: vga_ctext.S  vga_ctext.S~
software/screenshots/: ReadMe.md  petscii.md  settings.md  vt100.md  vttest.md
software/src/: CMakeLists.txt  Makefile  config.c  config.h  flash.c  flash.h  font.c  font.h  font_ega.h  font_petscii.h  framebuf.c  framebuf.h  framebuf_dvi.c  framebuf_dvi.h  framebuf_vga.cpp  framebuf_vga.h  keyboard.c  keyboard.h  keyboard_ps2.c  keyboard_ps2.h  keyboard_usb.c  keyboard_usb.h  main.c  pins.h  serial.c  serial.h  serial_cdc.c  serial_cdc.h  serial_uart.c  serial_uart.h  sound.c  sound.h  terminal.c  terminal.h  tmds_encode_font_2bpp.S  tmds_encode_font_2bpp.h  tusb_config.h  xmodem.c  xmodem.h
src/: CMakeLists.txt  config.h  font.c  font.h  font_cga.h  font_terminus.h  font_terminus_bold.h  font_vga.h  framebuf.c  framebuf_dvi.c  framebuf_dvi.h  framebuf_vga.h  keyboard.c  keyboard.h  keyboard_ps2.h  keyboard_usb.c  serial.h  serial_cdc.h  serial_uart.h  sound.c  sound.h  terminal.c  terminal.h
